plugins {
	id 'org.springframework.boot' version '3.3.5'
	id 'java'
	id 'io.freefair.lombok' version '8.10.2'
	id 'idea'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	developmentOnly('org.springframework.boot:spring-boot-devtools')
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.springframework.boot:spring-boot-starter-artemis'
	implementation 'org.apache.activemq:artemis-jakarta-server'
	implementation 'jakarta.jms:jakarta.jms-api'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//implementation 'javax.annotation:javax.annotation-api:1.3.2'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

idea {
	module {
		downloadJavadoc = true
		downloadSources = true
	}
}

test {
	useJUnitPlatform()
}
